@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-09-15 (SVN):
+    * gl_model.c (Mod_LoadLighting): Tidied up lit file loading code.
+
+2011-09-15 (SVN):
     * Added gl_zfix as a new cvar to enable/disable the z-fighting fix
       on the fly. From Sander van Dijk.
 
